--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
 
+<!DOCTYPE html>
+
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <script src="script.js" defer></script>
+        <title>ЗАДАНИЕ 6</title>
+    </head>
+
+</html>
