--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <head>
         <meta charset="utf-8">
         <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css">
         <title>ЗАДАНИЕ 7</title>
     </head>
-
+    <body>
+        <h1>Солнечная система</h1>
+        <arrow class="arrow-left">Левая стрелка</arrow> //Сделать стрелки для перемещения по галерее
+        <div class="images">
+            <img src="Solar_system_general_1.jpg">
+            <img src="Solar_system_general_2.jpg">
+            <img src="Solar_system_general_3.jpg">
+        </div>
+    </body>
 </html>
