--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-
 <html lang="ru">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.js"></script>
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <title>ЗАДАНИЕ 7</title>
     </head>
     <body>
-        <h1>Солнечная система</h1>
-        <arrow class="arrow-left">Левая стрелка</arrow> //Сделать стрелки для перемещения по галерее
-        <div class="images">
-            <img src="Solar_system_general_1.jpg">
-            <img src="Solar_system_general_2.jpg">
-            <img src="Solar_system_general_3.jpg">
+        <br><br><br>
+        <h1>Планеты Солнечной системы</h1>
+        <br>
+        <div class="content">
+            <div class="slider multiple-items">
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Меркурий" target="_blank"><img src="Mercury.jpeg"></a>
+                    <p>Меркурий ☿</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Венера" target="_blank"><img src="Venus.jpeg"></a>
+                    <p>Венера ♀</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Земля" target="_blank"><img src="Earth.webp"></a>
+                    <p>Земля 🜨</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Марс" target="_blank"><img src="Mars.jpg"></a>
+                    <p>Марс ♂</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Юпитер" target="_blank"><img src="Jupiter.webp"></a>
+                    <p>Юпитер ♃</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Сатурн" target="_blank"><img src="Saturn.jpeg"></a>
+                    <p>Сатурн ♄</p>
+                </div>
+                <div>
+                   <a href="https://ru.wikipedia.org/wiki/Уран_(планета)" target="_blank"><img src="Uranus.jpg"></a>
+                    <p>Уран ♅</p>
+                </div>
+                <div>
+                    <a href="https://ru.wikipedia.org/wiki/Нептун" target="_blank"><img src="Neptune.jpg"></a>
+                    <p>Нептун ♆</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
