--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
         <div class="content">
             <div class="slider multiple-items">
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Меркурий" target="_blank"><img src="Mercury.jpeg"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Меркурий" target="_blank" title="Меркурий ☿"><img src="Mercury.jpeg"></a>
                     <p>Меркурий ☿</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Венера" target="_blank"><img src="Venus.jpeg"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Венера" target="_blank" title="Венера ♀"><img src="Venus.jpeg"></a>
                     <p>Венера ♀</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Земля" target="_blank"><img src="Earth.webp"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Земля" target="_blank" title="Земля 🜨"><img src="Earth.webp"></a>
                     <p>Земля 🜨</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Марс" target="_blank"><img src="Mars.jpg"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Марс" target="_blank" title="Марс ♂"><img src="Mars.jpg"></a>
                     <p>Марс ♂</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Юпитер" target="_blank"><img src="Jupiter.webp"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Юпитер" target="_blank" title="Юпитер ♃"><img src="Jupiter.webp"></a>
                     <p>Юпитер ♃</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Сатурн" target="_blank"><img src="Saturn.jpeg"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Сатурн" target="_blank" title="Сатурн ♄"><img src="Saturn.jpeg"></a>
                     <p>Сатурн ♄</p>
                 </div>
                 <div>
-                   <a href="https://ru.wikipedia.org/wiki/Уран_(планета)" target="_blank"><img src="Uranus.jpg"></a>
+                   <a href="https://ru.wikipedia.org/wiki/Уран_(планета)" target="_blank" title="Уран ♅"><img src="Uranus.jpg"></a>
                     <p>Уран ♅</p>
                 </div>
                 <div>
-                    <a href="https://ru.wikipedia.org/wiki/Нептун" target="_blank"><img src="Neptune.jpg"></a>
+                    <a href="https://ru.wikipedia.org/wiki/Нептун" target="_blank" title="Нептун ♆"><img src="Neptune.jpg"></a>
                     <p>Нептун ♆</p>
                 </div>
             </div>
